tạo entity